调整系统上下文规范。调整session过滤器，优化工具类语法